Compatibility with mypersonalAI
changed also dashboard, no more google cloud api key needed

--- a/AIcam/main/html/apikey.html
+++ b/AIcam/main/html/apikey.html
@@ -96,7 +96,7 @@
         <li class="active"><a href="index.html">Dashboard</a></li>
         <li><a href="wifi.html">Wifi settings</a></li>
         <li><a href="gateway.html">Gateway settings</a></li>
-        <li><a href="apikey.html">Api key settings</a></li>
+        <li><a href="apikey.html">AI IP settings</a></li>
         <li><a href="deviceid.html">Device ID settings</a></li>
         <li><a href="detection.html">Object detection selection</a></li>
       </ul>
@@ -121,8 +121,8 @@
     <div class="col-sm-4">
       <form>
         <div class="input-group">
-          <span class="input-group-addon"><i>API KEY</i></span>
-          <input id="key" type="text" class="form-control" name="wifi" placeholder="Your google cloud visione api key">
+          <span class="input-group-addon"><i>AI IP</i></span>
+          <input id="key" type="text" class="form-control" name="wifi" placeholder="http://128.0.0.1:3000 Your AI ip port">
         </div>
       </form>
       <br>
