--- a/AIcam/main/html/wifi.html
+++ b/AIcam/main/html/wifi.html
@@ -96,7 +96,7 @@
         <li class="active"><a href="index.html">Dashboard</a></li>
         <li><a href="wifi.html">Wifi settings</a></li>
         <li><a href="gateway.html">Gateway settings</a></li>
-        <li><a href="apikey.html">Api key settings</a></li>
+        <li><a href="apikey.html">AI IP settings</a></li>
         <li><a href="deviceid.html">Device ID settings</a></li>
         <li><a href="detection.html">Object detection selection</a></li>
       </ul>
