--- a/AIcam/main/html/apikey.html
+++ b/AIcam/main/html/apikey.html
@@ -122,7 +122,7 @@
       <form>
         <div class="input-group">
           <span class="input-group-addon"><i>AI IP</i></span>
-          <input id="key" type="text" class="form-control" name="wifi" placeholder="http://128.0.0.1:3000 Your AI ip port">
+          <input id="key" type="text" class="form-control" name="wifi" placeholder="128.0.0.1:3000 Your AI ip port">
         </div>
       </form>
       <br>
